--- a/index.htm
+++ b/index.htm
@@ -46,11 +46,16 @@ Government Emergency Services at Your Fingertip – A Project by  Government of 
 </div>
     </header>
 
-    <main  class="bg-[#f5fff6] flex gap-2">
+    <main  class="bg-[#f5fff6] mb-[100px] ">
 
-        <section  class="pt-[48px] mx-[50px] grid grid-cols-4 gap-[20px] " >
+               <button class="btn bg-green-500  mt-[10px] border-[5px] py-[20px] border-red-400 mx-auto flex justify-center items-center sm:hidden block text-white py-[10px] px-[60px] rounded-[8px]">
+                Call History
+            </button>
+        <section  class="pt-[48px] sm:mx-[50px] sm:grid sm:grid-cols-4 gap-[20px] " >
 
-<div class="bg-white p-[32px] rounded-[12px] w-auto h-[380px] shadow-md ">
+
+
+<div class="bg-white p-[32px] rounded-[12px] sm:mb-0 mb-5 w-auto h-[380px] shadow-md ">
     <div class="flex justify-between items-center">
     <img class="h-[60px] p-[15px] bg-[#FFE3E2] rounded-2xl w-[60px]" src="./assets/emergency.png" alt="">
     <svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -77,7 +82,7 @@ Call</button>
 </div>
 
 
-<div class="bg-white p-[32px] rounded-[12px] w-auto h-[380px] shadow-md ">
+<div class="bg-white p-[32px] rounded-[12px] sm:mb-0 mb-5 w-auto h-[380px] shadow-md ">
     <div class="flex justify-between items-center">
     <img class="h-[60px] p-[15px] bg-[#FFE3E2] rounded-2xl w-[60px]" src="./assets/emergency.png" alt="">
     <svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -104,7 +109,7 @@ Call</button>
 </div>
 
 
-<div class="bg-white p-[32px] rounded-[12px] w-auto h-[380px] shadow-md ">
+<div class="bg-white p-[32px] rounded-[12px] sm:mb-0 mb-5 w-auto h-[380px] shadow-md ">
     <div class="flex justify-between items-center">
     <img class="h-[60px] p-[15px] bg-[#FFE3E2] rounded-2xl w-[60px]" src="./assets/emergency.png" alt="">
     <svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -131,12 +136,35 @@ Call</button>
 </div>
 
 
-<div class="bg-white p-[32px] rounded-[12px] w-auto shadow-md row-span-2 ">
-    
+<div class="bg-white p-[24px] rounded-[12px] sm:mb-0 mb-5 w-[380px] hidden sm:block shadow-md row-span-2 ">
+<div class="flex justify-between items-center mb-[16px]">
+    <div class="flex gap-1.5">
+    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M11.25 6C11.25 5.58579 11.5858 5.25 12 5.25C12.4142 5.25 12.75 5.58579 12.75 6V11.25H18C18.4142 11.25 18.75 11.5858 18.75 12C18.75 12.4142 18.4142 12.75 18 12.75H12C11.5858 12.75 11.25 12.4142 11.25 12V6Z" fill="#5C5C5C"/>
+<path d="M21.25 12C21.25 6.89121 17.1088 2.75 12 2.75C6.89121 2.75 2.75 6.89121 2.75 12C2.75 17.1088 6.89121 21.25 12 21.25C17.1088 21.25 21.25 17.1088 21.25 12ZM22.75 12C22.75 17.9372 17.9372 22.75 12 22.75C6.06279 22.75 1.25 17.9372 1.25 12C1.25 6.06279 6.06279 1.25 12 1.25C17.9372 1.25 22.75 6.06279 22.75 12Z" fill="#5C5C5C"/>
+</svg>
+<h2 class="font-semibold">Call History</h2>
+    </div>
+
+       <button class="btn bg-green-500 text-white py-[25px] px-[36px] rounded-[50px]">
+Clear</button>
+</div>
+
+<div class="flex justify-between items-center mb-[8px] bg-gray-100 p-[16px] rounded-[8px]">
+
+    <div>
+        <h2 class="font-semibold text-[18px]">amama</h2>
+        <p class="text-[16px]">18</p>
+    </div>
+    <p>Time</p>
+
 </div>
 
 
-<div class="bg-white p-[32px] rounded-[12px] w-auto h-[380px] shadow-md ">
+</div>
+
+
+<div class="bg-white p-[32px] rounded-[12px] sm:mb-0 mb-5 w-auto h-[380px] shadow-md ">
     <div class="flex justify-between items-center">
     <img class="h-[60px] p-[15px] bg-[#FFE3E2] rounded-2xl w-[60px]" src="./assets/emergency.png" alt="">
     <svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -164,7 +192,7 @@ Call</button>
 
 
 
-<div class="bg-white p-[32px] rounded-[12px] w-auto h-[380px] shadow-md ">
+<div class="bg-white p-[32px] rounded-[12px] sm:mb-0 mb-5 w-auto h-[380px] shadow-md ">
     <div class="flex justify-between items-center">
     <img class="h-[60px] p-[15px] bg-[#FFE3E2] rounded-2xl w-[60px]" src="./assets/emergency.png" alt="">
     <svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -193,7 +221,7 @@ Call</button>
 
 
 
-<div class="bg-white p-[32px] rounded-[12px] w-auto h-[380px] shadow-md  ">
+<div class="bg-white p-[32px] rounded-[12px] sm:mb-0 mb-5 w-auto h-[380px] shadow-md  ">
     <div class="flex justify-between items-center">
     <img class="h-[60px] p-[15px] bg-[#FFE3E2] rounded-2xl w-[60px]" src="./assets/emergency.png" alt="">
     <svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -229,9 +257,7 @@ Call</button>
 
     </main>
 
-    <footer>
 
-    </footer>
     <script src="script.js">
 
     </script>
