Adding js for call history button function in mobile device

--- a/index.htm
+++ b/index.htm
@@ -56,16 +56,16 @@ Government Emergency Services at Your Fingertip – A Project by  Government of 
 </div>
     </header>
 
-    <main  class="bg-[#f5fff6] mb-[100px] ">
+    <main class="bg-[#f5fff6] mb-[100px] ">
 
-               <button class="btn call bg-green-500  mt-[10px] border-[5px] py-[20px] border-red-400 mx-auto flex justify-center items-center sm:hidden block text-white py-[10px] px-[60px] rounded-[8px]">
+               <button id="mobile_btn" class="btn bg-green-500   mt-[10px] border-[5px] py-[20px] border-red-400 mx-auto flex justify-center items-center sm:hidden block text-white py-[10px] px-[60px] rounded-[8px]">
                 Call History
             </button>
         <section  class="pt-[48px] sm:mx-[50px] sm:grid sm:grid-cols-4 gap-[20px] " >
 
 
 
-<div class="bg-white p-[32px] rounded-[12px] sm:mb-0 mb-5 w-auto h-[380px] shadow-md ">
+<div class="bg-white p-[32px] hide rounded-[12px] sm:mb-0 mb-5 w-auto h-[380px] shadow-md ">
     <div class="flex justify-between items-center">
     <img class="h-[60px] p-[15px] bg-[#FFE3E2] rounded-2xl w-[60px]" src="./assets/emergency.png" alt="">
     <svg class="love" width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -92,7 +92,7 @@ Call</button>
 </div>
 
 
-<div class="bg-white p-[32px] rounded-[12px] sm:mb-0 mb-5 w-auto h-[380px] shadow-md ">
+<div class="bg-white p-[32px] hide rounded-[12px] sm:mb-0 mb-5 w-auto h-[380px] shadow-md ">
     <div class="flex justify-between items-center">
     <img class="h-[60px] p-[15px] bg-[#FFE3E2] rounded-2xl w-[60px]" src="./assets/police.png" alt="">
     <svg class="love" width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -119,7 +119,7 @@ Call</button>
 </div>
 
 
-<div class="bg-white p-[32px]  rounded-[12px] sm:mb-0 mb-5 w-auto h-[380px] shadow-md ">
+<div class="bg-white p-[32px]  hide rounded-[12px] sm:mb-0 mb-5 w-auto h-[380px] shadow-md ">
     <div class="flex justify-between items-center">
     <img class="h-[60px] p-[15px] bg-[#FFE3E2] rounded-2xl w-[60px]" src="./assets/fire-service.png" alt="">
     <svg class="love" width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -146,7 +146,7 @@ Call</button>
 </div>
 
 <!-- call history sec -->
-<div class="bg-white p-[24px] rounded-[12px] sm:mb-0 mb-5 w-[380px] hidden sm:block shadow-md row-span-3 ">
+<div id="call-history" class="bg-white p-[24px] rounded-[12px] sm:mb-0 mb-5 w-[380px] hidden sm:block shadow-md row-span-3 ">
 <div class="flex justify-between items-center mb-[16px]">
     <div class="flex gap-1.5">
     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -167,7 +167,7 @@ Clear</button>
 </div>
 <!-- end call history -->
 
-<div class="bg-white p-[32px] rounded-[12px] sm:mb-0 mb-5 w-auto h-[380px] shadow-md ">
+<div class="bg-white p-[32px] hide rounded-[12px] sm:mb-0 mb-5 w-auto h-[380px] shadow-md ">
     <div class="flex justify-between items-center">
     <img class="h-[60px] p-[15px] bg-[#FFE3E2] rounded-2xl w-[60px]" src="./assets/ambulance.png" alt="">
     <svg class="love" width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -195,7 +195,7 @@ Call</button>
 
 
 
-<div class="bg-white p-[32px] rounded-[12px] sm:mb-0 mb-5 w-auto h-[380px] shadow-md ">
+<div class="bg-white p-[32px] hide rounded-[12px] sm:mb-0 mb-5 w-auto h-[380px] shadow-md ">
     <div class="flex justify-between items-center">
     <img class="h-[60px] p-[15px] bg-[#FFE3E2] rounded-2xl w-[60px]" src="./assets/emergency.png" alt="">
     <svg class="love" width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -224,7 +224,7 @@ Call</button>
 
 
 
-<div class="bg-white p-[32px] rounded-[12px] sm:mb-0 mb-5 w-auto h-[380px] shadow-md  ">
+<div class="bg-white p-[32px] hide rounded-[12px] sm:mb-0 mb-5 w-auto h-[380px] shadow-md  ">
     <div class="flex justify-between items-center">
     <img class="h-[60px] p-[15px] bg-[#FFE3E2] rounded-2xl w-[60px]" src="./assets/emergency.png" alt="">
     <svg class="love" width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -253,7 +253,7 @@ Call</button>
 
 
 
-<div class="bg-white p-[32px] rounded-[12px] sm:mb-0 mb-5 w-auto h-[380px] shadow-md ">
+<div class="bg-white p-[32px] hide rounded-[12px] sm:mb-0 mb-5 w-auto h-[380px] shadow-md ">
     <div class="flex justify-between items-center">
     <img class="h-[60px] p-[15px] bg-[#FFE3E2] rounded-2xl w-[60px]" src="./assets/emergency.png" alt="">
     <svg class="love" width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -282,7 +282,7 @@ Call</button>
 
 
 
-<div class="bg-white p-[32px] rounded-[12px] sm:mb-0 mb-5 w-auto h-[380px] shadow-md ">
+<div class="bg-white p-[32px] hide rounded-[12px] sm:mb-0 mb-5 w-auto h-[380px] shadow-md ">
     <div class="flex justify-between items-center">
     <img class="h-[60px] p-[15px] bg-[#FFE3E2] rounded-2xl w-[60px]" src="./assets/emergency.png" alt="">
     <svg class="love" width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -311,7 +311,7 @@ Call</button>
 
 
 
-<div class="bg-white p-[32px] rounded-[12px] sm:mb-0 mb-5 w-auto h-[380px] shadow-md ">
+<div class="bg-white p-[32px] hide rounded-[12px] sm:mb-0 mb-5 w-auto h-[380px] shadow-md ">
     <div class="flex justify-between items-center">
     <img class="h-[60px] p-[15px] bg-[#FFE3E2] rounded-2xl w-[60px]" src="./assets/emergency.png" alt="">
     <svg class="love" width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
