Fixing some issues

--- a/index.htm
+++ b/index.htm
@@ -75,7 +75,7 @@
 
     <main class="bg-[#f5fff6] mb-[100px] ">
 
-               <button id="mobile_btn" class="btn bg-green-500   mt-[10px] border-[5px] py-[20px] border-red-400 mx-auto flex justify-center items-center sm:hidden block text-white py-[10px] px-[60px] rounded-[8px]">
+               <button id="mobile_btn" class="btn bg-green-500 text-[20px]  mt-[10px] border-[5px] py-[20px] border-red-400 mx-auto flex justify-center items-center sm:hidden block text-white py-[10px] px-[60px] rounded-[8px]">
                 Call History
             </button>
         <section  class="pt-[48px] sm:mx-[50px] sm:grid sm:grid-cols-4 gap-[20px] " >
